# fib-inject

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  build.cmake  index.js  install.js  package.json
.github/workflows/: build.yml
include/: postject-api.h
src/: addon.cpp  format.cpp  inject.h  inject_into_elf.cpp  inject_into_macho.cpp  inject_into_pe.cpp
test/: index.js  test.c  test.js
vender/LIEF/: CMakeLists.txt
vender/LIEF/include/LIEF/: exception.hpp
vender/LIEF/include/LIEF/Abstract/: Symbol.hpp
vender/LIEF/include/LIEF/ELF/: enums.hpp
vender/LIEF/src/ELF/: Layout.hpp
